# cinema

./: .env  Cargo.toml
src/: bookings.rs  cinemas.rs  db.rs  errors.rs  films.rs  handlers.rs  main.rs  models.rs  routes.rs  sessions.rs  tickets.rs
