[package]
name = "cinema"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
tokio = { version = "1.44.1", features = ["full"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
thiserror = "2.0.12"
log = "0.4.27"
env_logger = "0.11.7"